# marathon

./: .gitignore  Marathon Training App — Design Questions.md  questions.md  run.sh  spec.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: feedback.py  template.py  week.py  workout.py
backend/app/routers/: feedback.py  ical.py  race_info.py  stats.py  templates.py  weeks.py  workouts.py
backend/app/schemas/: feedback.py  template.py  week.py  workout.py
backend/app/services/: ical_service.py
backend/tests/: conftest.py  test_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts  utils.ts
frontend/src/components/calendar/: CompactWeekRow.tsx  DayCard.tsx  MileageBar.tsx  WeekNavigation.tsx  WeekView.tsx
frontend/src/components/feedback/: FeedbackModal.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  RaceCountdown.tsx
frontend/src/components/stats/: PaceTrendChart.tsx
frontend/src/components/summary/: WorkoutSummary.tsx
frontend/src/components/template/: TemplateForm.tsx  TemplateList.tsx  TemplatePicker.tsx
frontend/src/components/workout/: PaceInput.tsx  WorkoutCard.tsx  WorkoutForm.tsx
frontend/src/hooks/: useAllWorkouts.ts  useFeedback.ts  usePaceTrend.ts  useRaceInfo.ts  useTemplates.ts  useWeek.ts  useWorkouts.ts
